--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </section>
             <!-- Skills -->
-            <section>
+            <section class="skills">
                 <div class="container">
                     <h2 class="title-skills">Skills</h2>
                     <ul class="list-skills">
