--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Header -->
         <header class="header">
             <div class="header-contaiter container">
-                <nav>
+                <nav class="header-nav">
                     <a class="logo" href="./index.html">Web<span
                             class="logo-tech">Studio</span></a>
                     <ul class="list-header">
