--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="container">
                     <h2 class="title-skills">Skills</h2>
                     <ul class="list-skills">
-                        <li>
+                        <li class="list-features-item">
                             <h3 class="title-points">Strategy</h3>
                             <p class="title-description">
                                 Our goal is to identify the business problem to
@@ -71,7 +71,7 @@
                                 perfect and creative solution.
                             </p>
                         </li>
-                        <li>
+                        <li class="list-features-item">
                             <h3 class="title-points">Punctuality</h3>
                             <p class="title-description">
                                 Bring the key message to the brand's audience
@@ -80,7 +80,7 @@
                                 within the shortest possible time.
                             </p>
                         </li>
-                        <li>
+                        <li class="list-features-item">
                             <h3 class="title-points">Diligence</h3>
                             <p class="title-description">
                                 Research and confirm brands that present the
@@ -88,7 +88,7 @@
                                 growth opportunities and minimize risk.
                             </p>
                         </li>
-                        <li>
+                        <li class="list-features-item">
                             <h3 class="title-points">Technologies</h3>
                             <p class="title-description">
                                 Design practice focused on digital experiences.
