--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-                <a class="logo" href="./index.html">Web<span
+                <a class="logo-footer" href="./index.html">Web<span
                         class="logo-tech-white">Studio</span></a>
                 <p class="description-footer">
                     Increase the flow of customers and sales for
