--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <!-- Header -->
         <header class="header">
-            <div class="header-contaiter container">
+            <div class="container-header container">
                 <nav class="header-nav">
                     <a class="logo" href="./index.html">Web<span
                             class="logo-tech">Studio</span></a>
