end three homework

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <h2 class="portfolio-title">Our
                         Portfolio</h2>
                     <ul class="portfolio-list">
-                        <li>
+                        <li class="list-portfolio-item">
                             <img src="./images/img-banking.jpg"
                                 width="360"
                                 height="300"
@@ -166,7 +166,7 @@
                                     class="portfolio-text">App</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="list-portfolio-item">
                             <img src="./images/img-payment.jpg"
                                 width="360"
                                 height="300"
@@ -179,7 +179,7 @@
                                     class="portfolio-text">Marketing</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="list-portfolio-item">
                             <img src="./images/img-app.jpg"
                                 width="360"
                                 height="300"
@@ -192,7 +192,7 @@
                                     class="portfolio-text">App</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="list-portfolio-item">
                             <img src="./images/img-taxi.jpg"
                                 width="360"
                                 height="300"
@@ -205,7 +205,7 @@
                                     class="portfolio-text">Marketing</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="list-portfolio-item">
                             <img src="./images/img-screen.jpg"
                                 width="360"
                                 height="300"
@@ -218,7 +218,7 @@
                                     class="portfolio-text">Design</p>
                             </div>
                         </li>
-                        <li>
+                        <li class="list-portfolio-item">
                             <img src="./images/img-online.jpg"
                                 width="360"
                                 height="300"
