--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 <address class="address-contacts">
                     <ul class="list-contacts">
                         <li>
-                            <a class="link-nav"
+                            <a class="contacts"
                                 href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
                         <li>
-                            <a class="link-nav" href="tel:+110001111111">+11
+                            <a class="contacts" href="tel:+110001111111">+11
                                 (000)
                                 111-11-11</a>
                         </li>
